--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,52 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@font-face {
+    font-family: 'Okta Neue';
+    src: local('Okta Neue Regular'), local('Okta-Neue-Regular'),
+        url('./assets/fonts/OktaNeue-Regular.woff2') format('woff2'),
+        url('./assets/fonts/OktaNeue-Regular.woff') format('woff'),
+        url('./assets/fonts/OktaNeue-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+@font-face {
+    font-family: 'Okta Neue bold';
+    src: local('Okta Neue Bold'), local('Okta-Neue-Bold'),
+        url('./assets/fonts/OktaNeue-Bold.woff2') format('woff2'),
+        url('./assets/fonts/OktaNeue-Bold.woff') format('woff'),
+        url('./assets/fonts/OktaNeue-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+  }  
+
+@font-face {
+    font-family: 'Okta Neue italic';
+    src: local('Okta Neue Italic'), local('Okta-Neue-Italic'),
+        url('./assets/fonts/OktaNeue-RegularItalic.woff2') format('woff2'),
+        url('./assets/fonts/OktaNeue-RegularItalic.woff') format('woff'),
+        url('./assets/fonts/OktaNeue-RegularItalic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+  }  
+
+#root{
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+:root{
+    /* Padrão de cores do site */ 
+    --blue:#1700ad;
+    --orange:#ff432e;
+    --white: #fff ;
+
+    /* Padrão de fontes do site */ 
+    --font:'Okta Neue';
+    --font-bold:'Okta Neue bold';
+    --font-italic:'Okta Neue italic';
 }
