--- a/frontend/src/pages/services/services.module.css
+++ b/frontend/src/pages/services/services.module.css
@@ -1,14 +1,16 @@
 .services{
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 .servicesMenu{
     background-color: var(--blue);
-    padding: 10px 10px;
+    padding: 20px 10px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    overflow: hidden;
 }
 
 .servicesMenu a{
@@ -41,8 +43,11 @@
     align-items: center;
     margin-top: 25px;
     position: relative;
+    max-width: 300px;
     
 }
+
+
 
 .filterItem input{
     width: 100%;
@@ -101,4 +106,21 @@
 
 .starSponsored svg{
     cursor: pointer;
+}
+
+
+
+
+
+.providerContainer{
+    width: 70%;
+    height: 100%;
+    overflow-y: auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    cursor: pointer;
+    padding-top: 60px;
+    align-items: center;
+    justify-content: center;
 }
